# chunknorris

./: .gitignore  .gitlab-ci.yml  .pylintrc  01_generate_dataset.ipynb  02_get_dataset_from_mongo.ipynb  0_prepare_chunks.ipynb  0_prepare_chunks_langchain.ipynb  404.html  LICENCE  LICENSE  MAINTAINERS.md  Makefile  README.md  chunk_with_LLM.ipynb  chunk_with_PyMuPDF.ipynb  chunk_with_chunknorris.ipynb  chunk_with_langchain.ipynb  chunk_with_unstructured_api.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.dev.txt  requirements.ml-onnx.txt  requirements.ml-openvino.txt  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  lint.yml  release.yml
HTMLs/: 01_generate_dataset.ipynb  02_get_dataset_from_mongo.ipynb  0_prepare_chunks.ipynb  10_analyze_retriever_newVSold_chunks copy.ipynb  11_analyze_retriever_bias_generated_handmade_data.ipynb  1_analyze_retriever.ipynb  2_analyze_generation.ipynb  prompt_template.txt
HTMLs/src/: ChromaDBEmbedder.py  GetDataFromMongo.py  HTMLChunkNorris.py  RAG_dataset_generator.py  SentenceTransformerEmbeddingFunction.py  WikitJsonParser.py  WikitJsonParserv2.py  __init__.py
HTMLs/src/chunkers/: HTMLChunkNorris.py  __init__.py
HTMLs/src/data_generators/: GetDataFromMongo.py  RagDatasetGenerator.py
HTMLs/src/embedder/: __init__.py
HTMLs/src/prompts/: generate_short_answer.txt
HTMLs/src/utils/: split_into_sentences.py
PDFs/: chunk_with_langchain_unstructured.ipynb  chunk_with_unstructured_api.ipynb
app/: README.md  app.py  requirements.txt
docs/: index.md
docs/examples/: advanced_chunking.ipynb  custom_parser.ipynb  docx_chunking.ipynb  html_chunking.ipynb  index.md  markdown_chunking.ipynb  parallel_table_extraction.ipynb  pdf_chunking.ipynb  pdf_parsing.ipynb
docs/pages/: current_limitations.md  faq.md  getting_started.md  how_it_works.md  how_to_contribute.md  installation.md  performance_report.md  roadmap.md
docs/reference/: chunker_markdown.md  html_parser.md  index.md  markdown_chunker.md  parser_markdown.md  parser_pdf.md  pdf_parser.md  pipeline_base.md
docs/reference/components/: component_chunk.md  component_markdowndoc.md  component_markdownline.md
docs/reference/parsers/: parser_csv.md  parser_docx.md  parser_excel.md  parser_jupyter_notebook.md
docs/reference/pipelines/: pipeline_pdf.md
examples/: index.html
examples/advanced_chunking/: index.html
examples/custom_parser/: index.html
examples/docx_chunking/: index.html
examples/example_data/: sample.xlsx
examples/html_chunking/: index.html
examples/markdown_chunking/: index.html
examples/pdf_chunking/: index.html
examples/pdf_parsing/: index.html
overrides/: main.html
pages/current_limitations/: index.html
pages/faq/: index.html
pages/getting_started/: index.html
pages/how_it_works/: index.html
pages/how_to_contribute/: index.html
pages/installation/: index.html
pages/performance_report/: index.html
pages/roadmap/: index.html
reference/: index.html
reference/chunker_markdown/: index.html
reference/chunkers/chunker_markdown/: index.html
reference/components/component_chunk/: index.html
reference/components/component_markdowndoc/: index.html
reference/parser_html/: index.html
reference/parser_markdown/: index.html
reference/parser_pdf/: index.html
reference/parsers/parser_csv/: index.html
reference/pipeline_base/: index.html
reference/pipeline_pdf/: index.html
search/: search_index.json
src/: __init__.py
src/chunkers/: HTMLChunkNorris.py  MarkdownChunkNorris.py  __init__.py  markdown_chunknorris.py
src/chunknorris/: __init__.py  __init__.pyi  __main__.py
src/custom_chunkers/: README.md  WikitChunkNorris.py  __init__.py  wikit_chunknorris.py
src/data_generators/: __init__.py
src/exceptions/: exceptions.py
src/types/: types.py
src/utils/: utils.py
stylesheets/: extra.css
tests/: conftest.py
tests/chunkers/: test_MarkdownChunkNorris.py  test_markdown_chunknorris.py
tests/test_files/: file.csv  file.docx  file.html  file.ipynb  file.md  file.xlsx  file_html.json  file_md.json  tables.docx
tests/test_scripts/: test_on_all_files.py  test_on_all_pdf.py
tests/test_strings/: markdown_inputs.py  markdown_outputs.py
(+102 files in other folders)
