[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "images"]
include = ["*"]
exclude = ["__pycache__"]
namespaces = true  # true by default

[project]
name = "chunknorris"
version = "0.0.1"
authors = [
  { name="Wikit", email="dev@wikit.ai" },
]
description = "A package for chunking documents from various formats"
keywords = ["chunk", "document", "split", "html", "markdown", "pdf", "header"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Framework :: Pytest",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: Markup :: HTML",
    "Operating System :: OS Independent"
]
dependencies = [
  "markdownify>=0.11.6",
  "tiktoken>=0.5.2",
  "PyMuPDF>=1.23.16"
]

[project.urls]
Homepage = "https://gitlab.com/wikit/research-and-development/chunk-norris"
Issues = "https://gitlab.com/wikit/research-and-development/chunk-norris/-/issues"